--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+# Rsa keys used when encoding and decoding jwt token
+rsa.privateKey=classpath:certs/private.pem
+rsa.publicKey=classpath:certs/public.pem
