Add CORS config to SecurityConfig class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.mvc.hiddenmethod.filter.enabled=true
 # Rsa keys used when encoding and decoding jwt token
 rsa.privateKey=classpath:certs/private.pem
 rsa.publicKey=classpath:certs/public.pem
+
+client.origin = http://localhost:8081
