Add files upload dir to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ rsa.privateKey=classpath:certs/private.pem
 rsa.publicKey=classpath:certs/public.pem
 
 client.origin = http://localhost:8081
+
+files.upload.dir = /home/ruslan/self-improvement-social/uploads
